finish data and HangFire

--- a/CleverAutoApi/appsettings.json
+++ b/CleverAutoApi/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "ConnectionStrings": {
+    "HangfireConnection": "Data Source=hangfire.db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+
+
   "AllowedHosts": "*"
 }
