--- a/CleverAutoApi/CleverAutoApi.csproj
+++ b/CleverAutoApi/CleverAutoApi.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.8.6" />
+    <PackageReference Include="Hangfire.InMemory" Version="0.5.1" />
     <PackageReference Include="Hangfire.SQLite" Version="1.4.2" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.12">
